Fixed spacing between blocks, changed from hardcoded height to auto

--- a/_sass/components/map.scss
+++ b/_sass/components/map.scss
@@ -1,6 +1,6 @@
 .center {
 	display: block;
 	width: 800px;
-	height: 600px;
+	height: auto;
 	margin:auto;
 }
